--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Get Info</string>
+    <string name="app_name">Chiron</string>
     <string name="welcome_message">Welcome</string>
 </resources>
