--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Chiron</string>
     <string name="welcome_message">Welcome</string>
+    <string name="app_desc">Chiron helps you to find all medical emergencies information at your doorstep which can help you to save a precious life or your valuable time.</string>
 
     <string-array name="array_country">
         <item>Select Your Country</item>
